--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "14.x"
   },
   "private": true,
-  "proxy": "https://fmcw-deployedp.herokuapp.com",
+  "proxy": "http://localhost:4200",
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.5.0",
